<resources>
    <string name="app_name">ROSDroid</string>
    <string name="send_topic">Send Topic</string>
    <string name="ros_bridge_ip">ROS Bridge IP</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="call_service">Call Service</string>
    <string name="call_service_add_two_ints">Call service add two ints</string>
    <string name="call_service_say_hi">Call service say hi</string>
</resources>
