<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:text="@string/ros_bridge_ip"
                  android:layout_weight="0"/>
        <EditText
                android:id="@+id/ros_bridge_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        <View
                android:id="@+id/connect_status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect"/>

    <Button
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/subscribe"/>

    <EditText
            android:id="@+id/text_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/send_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_topic"
            android:enabled="false"/>

    <TextView
            android:id="@+id/receive_topic"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    <Button
            android:id="@+id/call_service_add_two_ints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/call_service_add_two_ints"/>
    <Button
            android:id="@+id/call_service_say_hi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/call_service_say_hi"/>
    <TextView
            android:id="@+id/call_server_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

</LinearLayout>